syntax = "proto3";

package protodb.server;

message CreateDatabase {
  string name = 1;
}

message CreateDatabaseResponse {
  bool success = 1;
  enum FailureCode {
    INVALID_DB = 0;
    DB_EXISTS = 1;
  }
  FailureCode failure_code = 2;
}
